# MoviePilot

./: .gitignore  AGENTS.md  README.md  README_EN.md  moviepilot  requirements.in  version.py
app/: cli.py  monitor.py  scheduler.py
docker/: Dockerfile  entrypoint.sh  update.sh
docs/: cli.md  mcp-api.md  testing.md
rust/moviepilot_rust/: Cargo.toml  pyproject.toml
rust/moviepilot_rust/src/: filter.rs  indexer.rs  lib.rs  meta.rs  utils.rs
scripts/: bootstrap-local.sh  local_setup.py
tests/: conftest.py  run.py  test_agent_activity_log.py  test_agent_add_subscribe_tool.py  test_agent_background_output.py  test_agent_image_support.py  test_agent_interaction.py  test_agent_llm_capability.py  test_agent_patch_tool_calls.py  test_agent_persona_tools.py  test_agent_plugin_tools.py  test_agent_prompt_secrets.py  test_agent_prompt_style.py  test_agent_runtime.py  test_agent_search_web_tool.py  test_agent_subagents.py  test_agent_submit_feedback_issue_tool.py  test_agent_summarization_streaming.py  test_agent_tool_factory_cache.py  test_agent_tool_selector_middleware.py  test_agent_tool_streaming.py  test_alist_storage.py  test_api_authorization.py  test_download_chain.py  test_episode_format_helper.py  test_execute_command_tool.py  test_feishu.py  test_llm_helper_testcall.py  test_llm_provider_registry.py  test_local_setup_config_dir.py  test_local_setup_uninstall.py  test_media_interaction.py  test_media_recognize_modules.py  test_media_recognize_share.py  test_mediascrape.py  test_mediaserver_sync_incremental.py  test_mediaserver_tv_stale_itemid.py  test_metainfo.py  (+23 more)
(+137 files in other folders)
