[package]
name = "moviepilot-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "moviepilot_rust"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.20"
percent-encoding = "2.3"
pyo3 = { version = "0.23", features = ["abi3-py311", "extension-module"] }
regex = "1.11"
scraper = "0.24"
url = "2.5"
